# ser2sock

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  S85-ser2sockinit  config.h.in  configure  configure.ac  main  main.c  makefile  ser2sock  ser2sock.c  ser2sock.conf.example  ser2sockmips
debian/: README.Debian  README.source  changelog  control  copyright  init.d  install  ser2sock.default  ser2sock.doc-base.EX
etc/ser2sock/: ca.conf  ser2sock.conf
init/: ser2sock  ser2sock.plist
init/systemd/: ser2sock.service
